[package]
name = "btcc"
version = "0.1.0"
authors = ["archerfeel <archerfeel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = "0.17.2"
pbkdf2 = "0.3.0"
hex = "0.4.2"
sha2 = "0.8.0"
hmac = "0.7.0"
rand = "0.7.3"
clap = "2.33.0"
ripemd160 = "0.8.0"
base58 = "0.1.0"
rpassword = "0.0.4"
